<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/actionArrow"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            tools:ignore="RtlHardcoded">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_action_arrow" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/payment_user_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_account_default" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/payment_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/profile_id"
                    android:textColor="@color/color_white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transaction_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_currency"
                        android:textColor="@color/color_button_disable"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/transaction_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:background="@null"
                        android:cursorVisible="false"
                        android:digits="0123456789.,"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:text="@string/txt_value"
                        android:textColor="@color/color_button_disable"
                        android:textSize="54sp"
                        tools:ignore="Autofill" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transaction_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_flag_card"
                        android:textColor="@color/color_white"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transaction_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/txt_edit"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/transaction_btn_payment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:background="@drawable/button_selector"
                android:enabled="false"
                android:text="@string/txt_payment"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="18sp"
                android:textStyle="normal" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>