<resources>
    <string name="app_name">DesafioPicPay</string>
    <string name="title_contacts">Contatos</string>
    <string name="profile_id">\@renderson</string>
    <string name="profile_name">Renderson Cerqueira</string>
    <string name="txt_sign_card">Cadastre um cartão \n de crédito</string>
    <string name="txt_instruction">Para fazer pagamentos para outras \n pessoas você precisa cadastrar um \n cartão de crédito pessoal.</string>
    <string name="txt_button_sign_card">Cadastrar cartão</string>
    <string name="txt_number_card">Número do cartão</string>
    <string name="txt_card_holder_name">Nome do titular</string>
    <string name="txt_due_date">Vencimento</string>
    <string name="txt_cvv">CVV</string>
    <string name="txt_currency">R$</string>
    <string name="txt_value">0,00</string>
    <string name="txt_flag_card">MasterCard %1$s •</string>
    <string name="txt_edit">EDITAR</string>
    <string name="txt_payment">Pagar</string>
    <string name="txt_contacts">Contatos</string>
    <string name="txt_receipt">Recibo</string>
    <string name="txt_date_transaction">%1$s ás %2$s</string>
    <string name="txt_id_transaction">Transação: %1$s</string>
    <string name="txt_id_card">Cartão Master %1$s</string>
    <string name="txt_currency_br">R$ %1$s</string>
    <string name="txt_total_paid">Total Pago</string>
    <string name="txt_register_card">Cadastrar cartão</string>
    <string name="txt_save">Salvar</string>
    <string name="txt_search">A quem você deseja pagar</string>
    <string name="txt_transaction_approved">Aprovada</string>
    <string name="txt_sign_credit_card">Cadastre um cartão de credito</string>
    <string name="txt_error_api">Error API</string>
    <string name="txt_untreated_error">Error não tratado</string>
    <string name="txt_error_server">Error Server</string>
</resources>
